<resources>
    <string name="app_name">Module_5</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="module5_mobile">手机号</string>
    <string name="module5_password">密码</string>
    <string name="module5_login">登录</string>
    <string name="module5_forget_password">忘记密码</string>
    <string name="module5_regrister_account">注册账号</string>
    <string name="module5_write_password">输入密码</string>
    <string name="module5_ensure_password">确认密码</string>
    <string name="module5_regrister">注册</string>
    <string name="module5_phone_not_null">手机号不能为空</string>
</resources>
