<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_base_layout" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_24">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/module5_mobile"
            android:inputType="phone"
            android:textColor="@color/module5_color_212121"
            android:textSize="15sp" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/module5_password"
            android:inputType="textPassword"
            android:textColor="@color/module5_color_212121"
            android:textSize="15sp" />

    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@drawable/module5_selector_button_login"
        android:gravity="center"
        android:paddingBottom="@dimen/dp_8"
        android:paddingTop="@dimen/dp_8"
        android:text="@string/module5_login"
        android:textColor="@color/color_ffffff"
        android:textSize="18dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_28">

        <TextView
            android:id="@+id/login_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="#f4f4f4"
            android:padding="4dp"
            android:visibility="gone"
            android:text="@string/module5_forget_password"
            android:textColor="@color/module5_color_212121"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="4dp"
            android:text="@string/module5_regrister_account"
            android:textColor="@color/module5_color_212121"
            android:textSize="14sp" />
    </RelativeLayout>
</LinearLayout>