<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/toolbar_base_layout" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginRight="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_16">
                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/module5_mobile"
                    android:inputType="phone"
                    android:textColor="@color/module5_color_212121"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginRight="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_16"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/module5_write_password"
                    android:inputType="textPassword"
                    android:textColor="@color/module5_color_212121"
                    android:textSize="15sp" />


            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_passwordagain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginRight="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_16"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_phoneagain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/module5_ensure_password"
                    android:inputType="textPassword"
                    android:textColor="@color/module5_color_212121"
                    android:textSize="15sp" />


            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/tv_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginRight="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_24"
                android:background="@drawable/module5_selector_button_login"
                android:gravity="center"
                android:paddingBottom="@dimen/dp_8"
                android:paddingTop="@dimen/dp_8"
                android:text="@string/module5_regrister"
                android:textColor="@color/color_ffffff"
                android:textSize="18dp" />

</LinearLayout>
